Parity push for interview question.