@@ -1,4 +1,6 @@
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     kotlin("jvm") version "1.9.21"
@@ -13,20 +15,29 @@ repositories {
     mavenCentral()
     maven("https://maven.pkg.jetbrains.space/public/p/compose/dev")
     google()
+    maven("https://jogamp.org/deployment/maven")
 }
 
 dependencies {
-    // Note, if you develop a library, you should use compose.desktop.common.
-    // compose.desktop.currentOs should be used in launcher-sourceSet
-    // (in a separate module for demo project and in testMain).
-    // With compose.desktop.common you will also lose @Preview functionality
+    val koinVersion = "3.6.0-wasm-alpha2"
     implementation(compose.desktop.currentOs)
     implementation("org.jetbrains:markdown:0.5.0")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
+    implementation("io.insert-koin:koin-compose:$koinVersion")
+    implementation("org.jogamp.gluegen:gluegen-rt-main:2.5.0")
+    implementation("org.jogamp.jogl:jogl-all-main:2.5.0")
+    api("io.github.kevinnzou:compose-webview-multiplatform:1.8.6")
+    // Testing dependencies.
+    testImplementation(kotlin("test"))
+}
+
+tasks.test {
+    useJUnitPlatform()
 }
 
 compose.desktop {
     application {
+
         mainClass = "MainKt"
 
         nativeDistributions {
@@ -34,5 +45,20 @@ compose.desktop {
             packageName = "BookieEditor"
             packageVersion = "1.0.0"
         }
+
+        // Configuration for WebView library
+
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        }
+
+        buildTypes.release.proguard {
+            configurationFiles.from("compose-desktop.pro")
+        }
+
     }
 }
